Fix leaky scrollbars (#95)

--- a/src/App.scss
+++ b/src/App.scss
@@ -49,6 +49,8 @@
   .pf-c-page__main-section {
     box-shadow: inset 0.125rem 0 0.125rem -0.0625rem rgba(3, 3, 3, 0.16);
     height: 100%;
+  }
+  .pf-c-page__main-section-gallery {
     overflow: scroll;
   }
   .pf-c-card__body {
